--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/user_form.html
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/user_form.html
@@ -17,7 +17,7 @@
 		<div>
 			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
 				<a class="navbar-brand" th:href="@{/}">
-					<img th:src="@{/images/img1.png}" width="25%" />
+					<img th:src="@{/images/ShopmeAdminSmall.png}" />
 				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
 					<span class="navbar-toggler-icon"></span>
@@ -67,7 +67,7 @@
 		</div>
 
 		<form th:action="@{/users/save}" method="post" style="max-width: 700px; margin: 0 auto" th:object="${user}"
-			onsubmit="return checkEmailUnique(this)">
+			onsubmit="return checkEmailUnique(this)" enctype="multipart/form-data">
 
 			<input type="hidden" th:field="*{id}">
 
@@ -127,6 +127,16 @@
 					</div>
 				</div>
 
+				<div class="form-group row">
+					<label class="col-sm-4 col-form-label">請上傳您的圖片:</label>
+					<div class="col-sm-8">
+						<input type="hidden" th:field="*{photos}" />
+						<input type="file" id="fileImage" name="image" accept="image/png, image/jpeg" class="mb-2" />
+						<img id="thumbnail" alt="Photos preview" th:src="@{${user.photosImagePath}}"
+							class="img-fluid" />
+					</div>
+				</div>
+
 				<div class="text-center">
 					<input type="submit" value="確定" class="btn btn-primary m-3" />
 					<input type="button" value="刪除" class="btn btn-secondary" id="buttonCancel" />
@@ -163,7 +173,31 @@
 			$("#buttonCancel").on("click", function () {
 				window.location = "[[@{/users}]]";
 			});
+
+			$("#fileImage").change(function () {
+				fileSize = this.files[0].size;
+				// alert("圖片大小: " + fileSize + "KB");
+
+				if (fileSize > (1024 * 1024)) {
+					this.setCustomValidity("您的照片大於 1MB!");
+					this.reportValidity();
+				} else {
+					this.setCustomValidity("");
+					showImageThumbnail(this);
+				}
+
+			});
 		});
+
+		function showImageThumbnail(fileInput) {
+			var file = fileInput.files[0];
+			var reader = new FileReader();
+			reader.onload = function (e) {
+				$("#thumbnail").attr("src", e.target.result);
+			};
+
+			reader.readAsDataURL(file);
+		}
 
 		function showModalDialog(title, message) {
 			$("#modalTitle").text(title);
