--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
@@ -19,7 +19,7 @@
 		<div>
 			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
 				<a class="navbar-brand" th:href="@{/}">
-					<img th:src="@{/images/img1.png}" width="25%" />
+					<img th:src="@{/images/ShopmeAdminSmall.png}" />
 				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
 					<span class="navbar-toggler-icon"></span>
@@ -90,7 +90,9 @@
 					<tr th:each="user : ${listUsers}">
 						<td>[[${user.id}]]</td>
 						<td>
-							<sapn class="fas fa-portrait fa-3x icon-dark"></sapn>
+							<span th:if="${user.photos == null}" class="fas fa-portrait fa-3x icon-silver"></span>
+							<img th:if="${user.photos != null}" th:src="@{${user.photosImagePath}}"
+								style="width: 100px" />
 						</td>
 						<td>[[${user.email}]]</td>
 						<td>[[${user.firstName}]]</td>
@@ -98,8 +100,11 @@
 						<td>[[${user.roles}]]</td>
 
 						<td>
-							<a th:if="${user.enabled == true}" class="fas fa-check-circle fa-2x icon-green" href=""></a>
-							<a th:if="${user.enabled == false}" class="fas fa-check-circle fa-2x icon-dark" href=""></a>
+							<a th:if="${user.enabled == true}" class="fas fa-check-circle fa-2x icon-green"
+								th:href="@{'/users/' + ${user.id} + '/enabled/false'}" title="使用者 已停用"></a>
+
+							<a th:if="${user.enabled == false}" class="fas fa-circle fa-2x icon-dark"
+								th:href="@{'/users/' + ${user.id} + '/enabled/true'}" title="使用者 已啟用"></a>
 						</td>
 
 						<td>
