--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
@@ -68,6 +68,8 @@
 		<div>
 			<h1>所有使用者</h1>
 			<a th:href="@{/users/new}">建立使用者</a>
+			&nbsp;&nbsp;
+			<a th:href="@{/users/export/csv}">匯出 CSV 檔案</a>
 		</div>
 
 		<div th:if="${message != null}" class="alert alert-success text-center">
