Movie 45. Finish 中文無法顯示

--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
@@ -70,6 +70,10 @@
 			<a th:href="@{/users/new}">建立使用者</a>
 			&nbsp;&nbsp;
 			<a th:href="@{/users/export/csv}">匯出 CSV 檔案</a>
+			&nbsp;&nbsp;
+			<a th:href="@{/users/export/excel}">匯出 Excel 檔案</a>
+			&nbsp;&nbsp;
+			<a th:href="@{/users/export/pdf}">匯出 PDF 檔案</a>
 		</div>
 
 		<div th:if="${message != null}" class="alert alert-success text-center">
