--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
@@ -8,6 +8,8 @@
 	<title>首頁</title>
 
 	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/style.css}" />
 	<script type="text/javascript" th:src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script>
 	<script type="text/javascript" th:src="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
 
@@ -16,6 +18,9 @@
 <body>
 	<div class="container-fluid">
 		<div>
+			<form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
+				<input type="submit" />
+			</form>
 			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
 				<a class="navbar-brand" th:href="@{/}">
 					<img th:src="@{/images/ShopmeAdminSmall.png}" />
@@ -58,6 +63,16 @@
 						<li class="nav-item">
 							<a class="nav-link" th:href="@{/settings}">設定</a>
 						</li>
+						<li>
+							<span class="fas fa-user fa-2x icon-silver"></span>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-toggle="dropdown"
+								sec:authentication="principal.fullname"></a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" id="logoutLink" href="">Logout</a>
+							</div>
+						</li>
 					</ul>
 				</div>
 
@@ -72,6 +87,14 @@
 		</div>
 
 	</div>
+	<script type="text/javascript">
+		$(document).ready(function () {
+			$("#logoutLink").on("click", function (e) {
+				e.preventDefault();
+				document.logoutForm.submit();
+			});
+		});
+	</script>
 </body>
 
 </html>
